Fix ColorPicker positioning when it spills out of screen

--- a/src/apps/watlas-common/watlas-viewer-common.css
+++ b/src/apps/watlas-common/watlas-viewer-common.css
@@ -281,7 +281,6 @@ select {
 }
 
 .wva-spinbox-button {
-    flex: 1;
     height: 0.6em;
     text-align: center;
 }
